More scaffolding and navigation + cybertigers cool effect

--- a/ronny-site/src/app/pages/home/home.component.html
+++ b/ronny-site/src/app/pages/home/home.component.html
@@ -72,7 +72,7 @@
           </ion-card-title
         ></ion-card-header>
       </ion-card>
-      <ion-card class='course-card' id='unix-card' routerLink='/courses/unix'>
+      <ion-card class='course-card' id='unix-card' routerLink='/courses/unix_os'>
         <ion-card-header>
           <ion-card-title class='course-card-title'>
             CS/INFOTC 3530 - UNIX Operating System
