--- a/ronny-site/src/app/app.component.html
+++ b/ronny-site/src/app/app.component.html
@@ -13,8 +13,8 @@
       <ion-button routerLink='/research' class='desktop-nav-button' routerLinkActive='active'>Research</ion-button>
       <ion-button routerLink='/publications' class='desktop-nav-button' routerLinkActive='active'>Publications</ion-button>
       <ion-button routerLink='/cv.pdf' class='desktop-nav-button' routerLinkActive='active'>CV</ion-button>
-      <ion-button routerLink='/teaching' class='desktop-nav-button' routerLinkActive='active'>Teaching</ion-button>
-      <ion-button routerLink='/cybertigers' class='desktop-nav-button' routerLinkActive='active'>CyberTigers @ MU</ion-button>
+      <ion-button (click)='teachingPresent($event)' class='desktop-nav-button' routerLinkActive='active'>Courses</ion-button>
+      <ion-button class='desktop-nav-button'><a href='https://cybertigers.org' target='_blank' class='glitch' data-text='CyberTigers @ MU'>CyberTigers @ MU</a></ion-button>
     </ion-buttons>
       </ion-toolbar>
     </ion-header>
