--- a/ronny-site/src/app/app.component.html
+++ b/ronny-site/src/app/app.component.html
@@ -6,12 +6,11 @@
             <img src='../assets/mu-logo.png'>
           </ion-avatar>
         </a>
-        <ion-text slot='start'><h3>Ronny Bazan Antequera</h3></ion-text>
+        <ion-text slot='start'><h3 id='faculty-h3'><a id='faculty-link' class='white' href="https://engineering.missouri.edu/faculty/bazan-antequera/" target="_blank">Ronny Bazan Antequera</a></h3></ion-text>
       <ion-buttons slot='start' class='desktop-nav-buttons'>
       <ion-button routerLink='/home' class='desktop-nav-button' routerLinkActive='active'>Home</ion-button>
-      <ion-button routerLink='/bio' class='desktop-nav-button' routerLinkActive='active'>Biography</ion-button>
+      <ion-button routerLink='/bio' class='desktop-nav-button' routerLinkActive='active'>Bio</ion-button>
       <ion-button routerLink='/research' class='desktop-nav-button' routerLinkActive='active'>Research</ion-button>
-      <ion-button routerLink='/publications' class='desktop-nav-button' routerLinkActive='active'>Publications</ion-button>
       <ion-button routerLink='/cv.pdf' class='desktop-nav-button' routerLinkActive='active'>CV</ion-button>
       <ion-button (click)='teachingPresent($event)' class='desktop-nav-button' routerLinkActive='active'>Courses</ion-button>
       <ion-button class='desktop-nav-button'><a href='https://cybertigers.org' target='_blank' class='glitch' data-text='CyberTigers @ MU'>CyberTigers @ MU</a></ion-button>
