--- a/ronny-site/src/app/pages/home/home.component.html
+++ b/ronny-site/src/app/pages/home/home.component.html
@@ -15,14 +15,14 @@
       <ion-card id='ronny-card'>
         <img src='../../../assets/ronny-1.jpg'>
         <ion-card-header>
-          <ion-card-title class='card-header'>Ronny Bazan-Antequera</ion-card-title>
+          <ion-card-title class='card-header'>Dr. Ronny Bazan-Antequera</ion-card-title>
           <ion-card-subtitle><i>Assistant Teaching Professor</i> | Electrical Engineering and Computer Science, Information Technology</ion-card-subtitle>
         </ion-card-header>
       </ion-card>
       <br>
       <div class='info-text-div'>
         <ion-text class='info-text'>
-          <p>    Hi there! My name is Ronny Bazan-Antequera, and I am an assistant teaching professor at the University of Missouri-Columbia.
+          <p>    Hi there! My name is Dr. Ronny Bazan-Antequera, and I am an assistant teaching professor at the University of Missouri-Columbia.
             Prior to joining the EECS department, I worked in the industry as a Senior Systems Administrator. I received a Fullbright Scholarship from 
             Mizzou, where I earned my Master's degree in Computer Science along with an Outstanding Master Student award. I went on to receive my PhD in
             Electrical Engineering & Computer Science from the University of Missouri.
@@ -42,7 +42,7 @@
         </ion-text>
       </div>
     </div>
-    <ion-text class='ion-text-center' id='courses-header'><h2>Courses</h2></ion-text>
+    <ion-text class='ion-text-center' id='courses-header'><h2>Teaching @ Mizzou</h2></ion-text>
     <div id='courses-div'>
       <ion-card class='course-card' id='netsec-card' routerLink='/courses/computer_network_security'>
         <ion-card-header>
@@ -81,7 +81,7 @@
       </ion-card>
       
     </div>
-  <div>
+  <div id='footer'>
     <ion-text><h5 id='contact'>Contact</h5></ion-text>
     <div id='footer-line'></div>
     <ion-text><h6 class='info-line'>Email: bazanantequerar@missouri.edu</h6></ion-text>
