--- a/ronny-site/src/app/pages/home/home.component.scss
+++ b/ronny-site/src/app/pages/home/home.component.scss
@@ -66,7 +66,7 @@ bottom: 0;
   letter-spacing: .03em; 
         font-family: "Orbitron";
         color: #ffffff;
-        font-size:80px;
+        font-size: clamp(1rem, 5vw, 5rem);
 }
 .typewriter h1#line1 {
     animation: 
@@ -191,6 +191,7 @@ div.info {
 #courses-header {
     background-color: black;
     color: white;
+    font-size: 3em;
 }
 .course-card-title {
     margin-top: 5%;
@@ -237,4 +238,7 @@ border: 2px solid white;
 }
 .pub-info a {
     text-decoration: none;
+}
+#footer a:hover {
+    color: white;
 }
