--- a/ronny-site/src/app/pages/courses/courses.page.scss
+++ b/ronny-site/src/app/pages/courses/courses.page.scss
@@ -1,4 +1,23 @@
 #course-image {
     width: 100%;
-    height: 100;
+    height: fit-content;
+}
+#course-title {
+    margin: 0 3vw 0 3vw !important;
+position: absolute;
+top: 10vh;
+width: 94vw;
+padding: 10px;
+font-size: 5em;
+background-color: rgba(0,0,0,0.9);
+border: 2px solid white;
+}
+.list-icon {
+    margin-right: 10px;
+}
+#course-description {
+    margin: 0 10vw;
+}
+#course-objectives-list,#course-topics-list {
+    margin: 0 5vw;
 }
