++more course info, mobile navbar, other fixes

--- a/ronny-site/src/app/pages/courses/courses.page.html
+++ b/ronny-site/src/app/pages/courses/courses.page.html
@@ -32,6 +32,7 @@
   </div>
   <div>
     <ion-text class='ion-text-center'><h3>Credit Hours: {{course().hours}}</h3></ion-text>
-    <ion-text class='ion-text-center'><h4>Prerequisites: {{course().prereq}}</h4></ion-text>
+    <ion-text class='ion-text-center'><h5>This class is {{course().mode}}</h5></ion-text>
+    <ion-text class='ion-text-center'><h5>Prerequisites: {{course().prereq}}</h5></ion-text>
   </div>
 </ion-content>
