--- a/ronny-site/src/app/pages/home/home.component.html
+++ b/ronny-site/src/app/pages/home/home.component.html
@@ -22,7 +22,7 @@
       <br>
       <div class='info-text-div'>
         <ion-text class='info-text'>
-          <p>    Hi there! My name is Dr. Ronny Bazan-Antequera, and I am an assistant teaching professor at the University of Missouri-Columbia.
+          <p>    Hello! My name is Dr. Ronny Bazan-Antequera, and I am an assistant teaching professor at the University of Missouri-Columbia.
             Prior to joining the EECS department, I worked in the industry as a Senior Systems Administrator. I received a Fullbright Scholarship from 
             Mizzou, where I earned my Master's degree in Computer Science along with an Outstanding Master Student award. I went on to receive my PhD in
             Electrical Engineering & Computer Science from the University of Missouri.
@@ -33,12 +33,16 @@
           <p>    At Mizzou, I teach a wide variety of Computer Science and Information Technology courses that focus on Linux Systems and Cybersecurity. These courses have been taught both online and in person, and emphasize
             a "learning by doing" hands-on approach. Much of this information consists of skills and abilities that employers want and expect in the real world of CS and IT in all manner of organizations.
             Each course has a set of 12 laboratory assignments, where students create and experiment upon virtualized computer systems, both on their own machines (VMWare Workstation/Fusion) and on the cloud (AWS).
-            Each course also features a final project that allows students to expand on the course content and investigate a topic valuable to their own future work as CS/IT professionals.
+            Each course also features a final project that allows students to expand on the course content and investigate topics valuable to their own future work as CS/IT professionals.
           </p>
         </ion-text>
         <br>
         <ion-text class='info-text'>
-          <p>(research interests, publications?? some other stuff can go in paragraph 3, open to ideas, these are just mockups)</p>
+          <p>My research and publications focus on cybersecurity, and I am working at Mizzou to bring new students into this specialized field. I helped establish the
+            <a class='cyber-link' href="https://engineering.missouri.edu/academics/engineering-minors/cybersecurity-certificate/" target="_blank">Cybersecurity Certificate</a> for IT majors, as
+            well as cosponsoring the newly established CyberTigers student organization for cybersecurity. I am currently working to expand the Cybersecurity program by expanding course offerings
+            and availability for interested students. If you have any questions, please do not hesitate to reach out to me!
+          </p>
         </ion-text>
       </div>
     </div>
