--- a/ronny-site/src/app/app.component.html
+++ b/ronny-site/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-app>
     <ion-header>
-      <ion-toolbar>
+      <ion-toolbar *ngIf='!isMobile()'>
         <a href='https://missouri.edu/' target='_blank' slot='start'>
           <ion-avatar slot='start' id='mu-img'>
             <img src='../assets/mu-logo.png'>
@@ -11,11 +11,56 @@
       <ion-button routerLink='/home' class='desktop-nav-button' routerLinkActive='active'>Home</ion-button>
       <ion-button routerLink='/bio' class='desktop-nav-button' routerLinkActive='active'>Bio</ion-button>
       <ion-button routerLink='/research' class='desktop-nav-button' routerLinkActive='active'>Research</ion-button>
-      <ion-button routerLink='/cv.pdf' class='desktop-nav-button' routerLinkActive='active'>CV</ion-button>
+      <ion-button href='/cv.pdf' target='_blank' class='desktop-nav-button'>CV</ion-button>
       <ion-button (click)='teachingPresent($event)' class='desktop-nav-button' routerLinkActive='active'>Courses</ion-button>
       <ion-button class='desktop-nav-button'><a href='https://cybertigers.org' target='_blank' class='glitch' data-text='CyberTigers @ MU'>CyberTigers @ MU</a></ion-button>
     </ion-buttons>
       </ion-toolbar>
+      <ion-toolbar *ngIf='isMobile()'>
+        <a href='https://missouri.edu/' target='_blank' slot='start'>
+          <ion-avatar slot='start' id='mu-img'>
+            <img src='../assets/mu-logo.png'>
+          </ion-avatar>
+        </a>
+        <ion-text slot='start'><h3 id='faculty-h3'><a id='faculty-link' class='white' href="https://engineering.missouri.edu/faculty/bazan-antequera/" target="_blank">Ronny Bazan Antequera</a></h3></ion-text>
+        <ion-buttons slot='end'><ion-button color='dark' (click)='openMenu()'><ion-icon name='menu' id='menu-icon'></ion-icon></ion-button></ion-buttons>
+      </ion-toolbar>
     </ion-header>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
+    <ion-router-outlet id="main"></ion-router-outlet>
+
+    <ion-menu side="end" menuId="main" contentId="main">
+      <ion-header>
+        <ion-toolbar color="light">
+          <ion-title>Menu</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <ion-list>
+          <ion-item class='menu-item no-select' lines='none' routerLink='/home'>
+            <ion-icon slot='start' name='layers-outline' class='menu-icon'></ion-icon>
+            <ion-label>Home</ion-label>
+          </ion-item>
+          <ion-item class='menu-item no-select' lines='none' routerLink='/bio'>
+            <ion-icon slot='start' name='search-outline' color='secondary' class='menu-icon'></ion-icon>
+            <ion-label>Bio</ion-label>
+          </ion-item>
+          <ion-item class='menu-item no-select' lines='none'>
+            <ion-icon slot='start' name='settings-outline' color='tertiary' class='menu-icon'></ion-icon>
+            <ion-label>Research</ion-label>
+          </ion-item>
+          <ion-item class='menu-item no-select' lines='none'>
+            <ion-icon name='sunny-outline' class='menu-icon'></ion-icon>
+            <ion-label>CV</ion-label>
+          </ion-item>
+          <ion-item class='menu-item no-select' lines='none' routerLink='/courses'>
+            <ion-icon slot='start' name='layers-outline' class='menu-icon'></ion-icon>
+            <ion-label>Courses</ion-label>
+          </ion-item>
+          <ion-item class='menu-item no-select' lines='none'>
+            <ion-icon slot='start' name='log-out-outline' color='warning' class='menu-icon'></ion-icon>
+            <ion-label>CyberTigers @ MU</ion-label>
+          </ion-item>
+        </ion-list>
+      </ion-content>
+    </ion-menu>
 </ion-app>
