--- a/ronny-site/src/app/pages/courses/courses.page.scss
+++ b/ronny-site/src/app/pages/courses/courses.page.scss
@@ -8,7 +8,7 @@ position: absolute;
 top: 10vh;
 width: 94vw;
 padding: 10px;
-font-size: 5em;
+font-size: clamp(1rem, 5vw, 5rem);
 background-color: rgba(0,0,0,0.9);
 border: 2px solid white;
 }
