--- a/ronny-site/src/app/pages/home/home.component.scss
+++ b/ronny-site/src/app/pages/home/home.component.scss
@@ -167,7 +167,6 @@ div.info {
     margin: auto;
     margin-bottom: 40px;
     margin-top: 20px;
-    background-size: cover;
     cursor: pointer;
 }
 .card-image {
@@ -199,7 +198,8 @@ margin-left: auto;
 margin-right: auto;
 text-align: center;
 background-color: rgba(0,0,0,0.9);
-width: max-content;
+width: 90%;
+max-width: max-content;
 padding: 10px;
 border: 2px solid white;
 }
@@ -241,4 +241,8 @@ border: 2px solid white;
 }
 #footer a:hover {
     color: white;
+}
+a.cyber-link {
+    text-decoration: none;
+    color:rgb(36, 175, 23);
 }
