--- a/ronny-site/src/app/pages/home/home.component.html
+++ b/ronny-site/src/app/pages/home/home.component.html
@@ -51,35 +51,35 @@
       <ion-card class='course-card' id='netsec-card' routerLink='/courses/computer_network_security'>
         <ion-card-header>
           <ion-card-title class='course-card-title'>
-            INFOTC 3810 - Computer Network Security
+            IT 3810 - Computer Network Security
           </ion-card-title
         ></ion-card-header>
       </ion-card>
       <ion-card class='course-card' id='advsec-card' routerLink='/courses/adv_cyber_security'>
         <ion-card-header>
           <ion-card-title class='course-card-title'>
-            INFOTC 3910 - Advanced Cyber Security
+            IT 3910 - Advanced Cyber Security
           </ion-card-title
         ></ion-card-header>
       </ion-card>
       <ion-card class='course-card' id='sysadmin-card' routerLink='/courses/system_administration'>
         <ion-card-header>
           <ion-card-title class='course-card-title'>
-            INFOTC 3850 - Computer Systems Administration
+            IT 3850 - Computer Systems Administration
           </ion-card-title
         ></ion-card-header>
       </ion-card>
       <ion-card class='course-card' id='forensics-card' routerLink='/courses/digital_forensics'>
         <ion-card-header>
           <ion-card-title class='course-card-title'>
-            CS/INFOTC 4910 - Digital Forensics
+            CS/IT 4910 - Digital Forensics
           </ion-card-title
         ></ion-card-header>
       </ion-card>
       <ion-card class='course-card' id='unix-card' routerLink='/courses/unix_os'>
         <ion-card-header>
           <ion-card-title class='course-card-title'>
-            CS/INFOTC 3530 - UNIX Operating System
+            CS/IT 3530 - UNIX Operating System
           </ion-card-title
         ></ion-card-header>
       </ion-card>
