--- a/ronny-site/src/app/app.component.html
+++ b/ronny-site/src/app/app.component.html
@@ -12,7 +12,7 @@
       <ion-button routerLink='/bio' class='desktop-nav-button' routerLinkActive='active'>Bio</ion-button>
       <ion-button routerLink='/research' class='desktop-nav-button' routerLinkActive='active'>Research</ion-button>
       <ion-button href='/cv.pdf' target='_blank' class='desktop-nav-button'>CV</ion-button>
-      <ion-button (click)='teachingPresent($event)' class='desktop-nav-button' routerLinkActive='active'>Courses</ion-button>
+      <ion-button (click)='teachingPresent($event)' class='desktop-nav-button' [class.active]='this.isOnCourses()'>Courses</ion-button>
       <ion-button class='desktop-nav-button'><a href='https://cybertigers.org' target='_blank' class='glitch' data-text='CyberTigers @ MU'>CyberTigers @ MU</a></ion-button>
     </ion-buttons>
       </ion-toolbar>
@@ -36,29 +36,31 @@
       </ion-header>
       <ion-content>
         <ion-list>
-          <ion-item class='menu-item no-select' lines='none' routerLink='/home'>
-            <ion-icon slot='start' name='layers-outline' class='menu-icon'></ion-icon>
+          <ion-item class='menu-item' routerLink='/home'>
+            <ion-icon slot='start' name='home' color='success'></ion-icon>
             <ion-label>Home</ion-label>
           </ion-item>
-          <ion-item class='menu-item no-select' lines='none' routerLink='/bio'>
-            <ion-icon slot='start' name='search-outline' color='secondary' class='menu-icon'></ion-icon>
+          <ion-item class='menu-item' routerLink='/bio'>
+            <ion-icon slot='start' name='person' color='primary'></ion-icon>
             <ion-label>Bio</ion-label>
           </ion-item>
-          <ion-item class='menu-item no-select' lines='none'>
-            <ion-icon slot='start' name='settings-outline' color='tertiary' class='menu-icon'></ion-icon>
+          <ion-item class='menu-item' routerLink='/research'>
+            <ion-icon slot='start' name='search' color='tertiary'></ion-icon>
             <ion-label>Research</ion-label>
           </ion-item>
-          <ion-item class='menu-item no-select' lines='none'>
-            <ion-icon name='sunny-outline' class='menu-icon'></ion-icon>
-            <ion-label>CV</ion-label>
+          <a href='/cv.pdf' target='_blank'>
+          <ion-item class='menu-item'>
+            <ion-icon slot='start' name='document-text' color='dark'></ion-icon>
+            <ion-label>CV</ion-label>      
           </ion-item>
-          <ion-item class='menu-item no-select' lines='none' routerLink='/courses'>
+          </a>
+          <ion-item class='menu-item no-select' (click)='teachingPresent($event)'>
             <ion-icon slot='start' name='layers-outline' class='menu-icon'></ion-icon>
             <ion-label>Courses</ion-label>
           </ion-item>
-          <ion-item class='menu-item no-select' lines='none'>
+          <ion-item class='menu-item no-select'>
             <ion-icon slot='start' name='log-out-outline' color='warning' class='menu-icon'></ion-icon>
-            <ion-label>CyberTigers @ MU</ion-label>
+            <a href='https://cybertigers.org' target='_blank' class='glitch white' data-text='CyberTigers @ MU'>CyberTigers @ MU</a>
           </ion-item>
         </ion-list>
       </ion-content>
