--- a/ronny-site/src/app/pages/courses/courses.page.scss
+++ b/ronny-site/src/app/pages/courses/courses.page.scss
@@ -81,3 +81,9 @@ border: 2px solid white;
 .mobile-youtube-vid {
     width: 100% !important;
 }
+.left-quote {
+    margin-right: 2px;
+}
+.right-quote {
+    margin-left: 2px;
+}
