--- a/ronny-site/src/app/pages/home/home.component.html
+++ b/ronny-site/src/app/pages/home/home.component.html
@@ -40,8 +40,8 @@
         <ion-text class='info-text'>
           <p>My research and publications focus on cybersecurity, and I am working at Mizzou to bring new students into this specialized field. I helped establish the
             <a class='cyber-link' href="https://engineering.missouri.edu/academics/engineering-minors/cybersecurity-certificate/" target="_blank">Cybersecurity Certificate</a> for IT majors, as
-            well as cosponsoring the newly established CyberTigers student organization for cybersecurity. I am currently working to expand the Cybersecurity program by expanding course offerings
-            and availability for interested students. If you have any questions, please do not hesitate to reach out to me!
+            well as cosponsoring the newly established CyberTigers student organization for connecting and developing students interested in cybersecurity. I am currently working to expand the Cybersecurity program by expanding course offerings
+            and availability for students. If you have any questions, please do not hesitate to reach out to me!
           </p>
         </ion-text>
       </div>
@@ -88,7 +88,7 @@
   <div id='footer'>
     <ion-text><h5 id='contact'>Contact</h5></ion-text>
     <div id='footer-line'></div>
-    <ion-text><h6 class='info-line'>Email: bazanantequerar@missouri.edu</h6></ion-text>
+    <ion-text><h6 class='info-line'>Email: <a href='mailto:bazanantequerar@missouri.edu' target='_blank'>bazanantequerar@missouri.edu</a></h6></ion-text>
     <ion-text><h6 class='info-line'>Office: 2437 L Lafferre Hall</h6></ion-text>
     <ion-text><h6 class='info-line'>Office Hours: M-F | 8:30AM - 4:30PM</h6></ion-text>
     <br>
