--- a/ronny-site/src/app/pages/research/research.component.html
+++ b/ronny-site/src/app/pages/research/research.component.html
@@ -1,3 +1,50 @@
-<p>
-  research works!
-</p>
+<ion-header>
+  <ion-toolbar></ion-toolbar>
+</ion-header>
+<ion-content>
+  <img src='../../../assets/ronny-research.jpg' id='ronny-teaching'>
+  <ion-text class='ion-text-center'><h3 id='title'>Research</h3></ion-text>
+  <div id='bio'>
+  <br>
+  <ion-text class='ion-text-center'><h3>Peer-Reviewed Publications</h3></ion-text>
+  <br>
+  <ion-text><h5 class='margin-left'>Journal</h5></ion-text>
+  <ul class='margin-left'>
+    <li><strong>R. Bazan</strong>, P. Calyam, A. Chandrashekara, R. Mitra, “Recommending Heterogeneous Resources for Science Gateway Applications based on Custom Templates Composition”, Elsevier Future Generation Computer Systems (FGCS) – Special Issue on Science Gateways, 2019.</li>
+    <li>M. Dickinson, S. Debroy, P. Calyam, S. Valluripally, Y. Zhang, <strong>R. Bazan</strong>, T. Joshi, T. White, D. Xu, “Multi-cloud Performance and Security Driven Federated Workflow Management”, IEEE Transactions on Cloud Computing (TCC), 2018.</li>
+    <li><strong>R. Bazan</strong>, P. Calyam, S. Debroy, L. Cui, S. Seetharam, M. Dickinson, T. Joshi, D. Xu, T. Beyene, "ADON: Application-Driven Overlay Network-as-a-Service for Data Intensive Science", Transactions on Cloud Computing, 2017.</li>
+    <li>P. Calyam, I. Jahnke, A. Mishra, <strong>R. Bazan</strong>, D. Chemodanov, M. Skubic, “Towards an ElderCare Living Lab for Sensor-based Health Assessment and Physical Therapy”, IEEE Cloud Computing Magazine (Cloud4ELE), 2017.</li>
+    <li>A. Mishra, <strong>R. Bazan</strong>, D. Chemodanov, P. Calyam, M. Skubic, “Synchronous Big Data Analytics for Personalized and Remote Physical Therapy”, Elsevier Journal SI on Pervasive and Mobile Computing, 2015.</li>
+  </ul>
+  <br>
+  <ion-text><h5 class='margin-left'>Conference</h5></ion-text>
+  <ul class='margin-left'>
+    <li><strong>R. Bazan</strong>, P. Calyam, A. Chandrashekara, S. Malhotra, “Recommending Resources to Cloud Applications based on Custom Templates Composition”, ACM Computing Frontiers Conference, 2017.</li>
+    <li>A. Akula, P. Calyam, <strong>R. Bazan</strong>, R. Leto, “Advanced Manufacturing Collaboration in a Cloud-based App Marketplace”, ACM Computing Frontiers Conference, 2017.</li>
+    <li><strong>R. Bazan</strong>, P. Calyam, D. Chemodanov, W. de Donato, A. Mishra, A. Pescape, M. Skubic, “Socio-technical Approach to Engineer Gigabit App Performance for Physical Therapy-as-a-Service”, IEEE Healthcom, 2017.</li>
+    <li>T. Nguyen, P. Calyam, <strong>R. Bazan</strong>, “Benchmarking in Virtual Desktops for End-to-End Performance Traceability”, IEEE/IFIP Workshop on QoE Centric Management (QCMan), 2015.</li>
+    <li><strong>R. Bazan</strong>, G.Bui, P. Calyam, B. Morago, T. Nguyen, Y. Duan, “LIDAR-based Virtual Environment Study for Disaster Response Scenarios”, IFIP/IEEE International Symposium on Integrated Network Management (IM), 2015.</li>
+    <li>S. Ramisetty, <strong>R. Bazan</strong>, P. Calyam, J. Cecil, A. Akula, R. Leto, “Ontology Integration for Advanced Manufacturing Collaboration in Cloud Platforms”, IFIP/IEEE Intl. Symposium on IntegratedNetwork Management (IM), 2015.</li>
+    <li>P. Calyam, S. Seetharam, <strong>R. Bazan</strong>, “GENI Laboratory Exercises Development for a Cloud Computing Course”, GENI Research and Education Experiments Workshop, 2014.</li>
+  </ul>
+  </div>
+<div id='ed'>
+
+<ion-text><h5>Technical Presentations and Demonstrations</h5></ion-text>
+
+<ul>
+  <li><strong>“Recommending Resources to Cloud Applications based on Custom Templates Composition”</strong> - paper presentation at ACM Computing Frontiers Conference, Siena, Italy, 2017.</li>
+  <li><strong>“Advanced Manufacturing Collaboration in a Cloud-based App Marketplace”</strong> - paper presentation at ACM Computing Frontiers Conference, Siena, Italy, 2017.</li>
+  <li><strong>“Socio-technical Approach to Engineer Gigabit App Performance for Physical Therapy-as-a-Service”</strong> - paper presentation at IEEE Healthcom, Dalian, China, 2017.</li>
+  <li><strong>Recommending Resources to Cloud Applications based on Custom Templates Composition</strong> – Demo Presentation at GENI NICE Engineering Conference, Irvine, California, 2016.</li>
+  <li><strong>Hybrid Cloud Technologies for HPC Queuing Experiments in ‘Simulation as a Service’</strong> - Demo Presentation at GENI 24th Engineering Conference, Tempe, Arizona, 2016.</li>
+  <li><strong>HPC Queuing Experiments in ‘Simulation as a Service’</strong> – Demo Presentation at GENI NICE Engineering Conference, San Francisco, California, 2015.</li>
+  <li><strong>“An App Marketplace for Advanced Manufacturing”</strong> - Demo Presentation at GENI 22nd Engineering Conference, Washington DC, 2015.</li>
+  <li><strong>"Physical Therapy as a Service"</strong> - Invited Talk/Demo at US Ignite Application Summit, Washington DC, 2015.</li>
+  <li><strong>“Ontology Integration for Advanced Manufacturing Collaboration in Cloud Platform”</strong> - Demo Presentation at GENI 21st Engineering Conference, Bloomington, Indiana, 2014.</li>
+  <li><strong>“Interactive Interface for Remote Physical Therapy”</strong> - Invited Talk/Demo at US Ignite Application Summit @ Juniper Networks, Sunnyvale, California, 2014.</li>
+  <li><strong>“Simulation-as-a-Service: A GENI Experiment for Advanced Manufacturing”</strong> - Demo Presentation at GENI 19th Engineering Conference at Georgia Tech, Atlanta, Georgia, 2014.</li>
+  <li><strong>“GENI Lab Exercises for a Cloud Computing Course”</strong> - Talk at NSF Workshop on GENI in Education, Brooklyn, NY (In conjunction with 18th GENI Engineering Conference) 2013.</li>
+</ul>
+</div>
+</ion-content>
