--- a/ronny-site/src/app/app.component.html
+++ b/ronny-site/src/app/app.component.html
@@ -48,7 +48,7 @@
             <ion-icon slot='start' name='search' color='tertiary'></ion-icon>
             <ion-label>Research</ion-label>
           </ion-item>
-          <a href='/cv.pdf' target='_blank' (click)='closeMenu()'>
+          <a href='/assets/cv.pdf' target='_blank' (click)='closeMenu()'>
           <ion-item class='menu-item'>
             <ion-icon slot='start' name='document-text' color='dark'></ion-icon>
             <ion-label>CV</ion-label>      
