Final fix I swear

--- a/ronny-site/src/app/app.component.html
+++ b/ronny-site/src/app/app.component.html
@@ -11,7 +11,7 @@
       <ion-button routerLink='/home' class='desktop-nav-button' routerLinkActive='active'>Home</ion-button>
       <ion-button routerLink='/bio' class='desktop-nav-button' routerLinkActive='active'>Bio</ion-button>
       <ion-button routerLink='/research' class='desktop-nav-button' routerLinkActive='active'>Research</ion-button>
-      <ion-button href='/cv.pdf' target='_blank' class='desktop-nav-button'>CV</ion-button>
+      <ion-button href='/assets/cv.pdf' target='_blank' class='desktop-nav-button'>CV</ion-button>
       <ion-button (click)='teachingPresent($event)' class='desktop-nav-button' [class.active]='this.isOnCourses()'>Courses</ion-button>
       <ion-button class='desktop-nav-button'><a href='https://cybertigers.org' target='_blank' class='glitch' data-text='CyberTigers @ MU'>CyberTigers @ MU</a></ion-button>
     </ion-buttons>
