--- a/ronny-site/src/app/pages/courses/courses.page.scss
+++ b/ronny-site/src/app/pages/courses/courses.page.scss
@@ -1,6 +1,7 @@
 #course-image {
     width: 100%;
-    height: fit-content;
+    height: 80vh;
+    background-size: cover;
 }
 #course-title {
     margin: 0 3vw 0 3vw !important;
