--- a/ronny-site/src/app/pages/research/research.component.html
+++ b/ronny-site/src/app/pages/research/research.component.html
@@ -2,7 +2,7 @@
   <ion-toolbar></ion-toolbar>
 </ion-header>
 <ion-content>
-  <img src='../../../assets/ronny-research.jpg' id='ronny-teaching'>
+  <div id='ronny-teaching'></div>
   <ion-text class='ion-text-center'><h3 id='title'>Research</h3></ion-text>
   <div id='bio'>
   <br>
