--- a/ronny-site/src/app/pages/home/home.component.html
+++ b/ronny-site/src/app/pages/home/home.component.html
@@ -13,7 +13,7 @@
     <div class='info'>
       <br>
       <ion-card id='ronny-card'>
-        <img src='../../../assets/ronny-1.jpg'>
+        <img src='/bazanr/assets/ronny-1.jpg'>
         <ion-card-header>
           <ion-card-title class='card-header'>Dr. Ronny Bazan-Antequera</ion-card-title>
           <ion-card-subtitle><i>Assistant Teaching Professor</i> | Electrical Engineering and Computer Science, Information Technology</ion-card-subtitle>
