--- a/ronny-site/src/app/pages/research/research.component.scss
+++ b/ronny-site/src/app/pages/research/research.component.scss
@@ -4,7 +4,7 @@
 #ronny-teaching {
     width: 100%;
     height: 80vh;
-    background-image: url('../../../assets/ronny-research.jpg');
+    background-image: url('/bazanr/assets/ronny-research.jpg');
     background-size: cover;
     margin-bottom: -10px;
 }
