--- a/ronny-site/src/app/pages/courses/courses.page.scss
+++ b/ronny-site/src/app/pages/courses/courses.page.scss
@@ -39,7 +39,7 @@ border: 2px solid white;
 }
 .sticky {
     position: sticky;
-    top: 1%;
+    top: 2vh;
 }
 .circle-container {
     text-align: center;
