--- a/ronny-site/src/app/pages/home/home.component.html
+++ b/ronny-site/src/app/pages/home/home.component.html
@@ -23,8 +23,8 @@
       <div class='info-text-div'>
         <ion-text class='info-text'>
           <p>    Hello! My name is Dr. Ronny Bazan-Antequera, and I am an assistant teaching professor at the University of Missouri-Columbia.
-            Prior to joining the EECS department, I worked in the industry as a Senior Systems Administrator. I received a Fullbright Scholarship from 
-            Mizzou, where I earned my Master's degree in Computer Science along with an Outstanding Master Student award. I went on to receive my PhD in
+            Prior to joining the EECS department, I worked in the industry as a Senior Systems Administrator. I received a Fullbright Scholarship to attend Mizzou
+            where I earned my Master's degree in Computer Science along with an Outstanding Master Student award. I went on to receive my PhD in
             Electrical Engineering & Computer Science from the University of Missouri.
           </p>
         </ion-text>
@@ -38,7 +38,7 @@
         </ion-text>
         <br>
         <ion-text class='info-text'>
-          <p>My research and publications focus on cybersecurity, and I am working at Mizzou to bring new students into this specialized field. I helped establish the
+          <p>My research and publications focus on computer networking and cybersecurity, and I am working at Mizzou to bring new students into this specialized field. I established the
             <a class='cyber-link' href="https://engineering.missouri.edu/academics/engineering-minors/cybersecurity-certificate/" target="_blank">Cybersecurity Certificate</a> for IT majors, as
             well as cosponsoring the newly established CyberTigers student organization for connecting and developing students interested in cybersecurity. I am currently working to expand the Cybersecurity program by expanding course offerings
             and availability for students. If you have any questions, please do not hesitate to reach out to me!
