Update CyberTygers link and spelling

--- a/ronny-site/src/app/app.component.html
+++ b/ronny-site/src/app/app.component.html
@@ -13,7 +13,7 @@
       <ion-button routerLink='/research' class='desktop-nav-button' routerLinkActive='active'>Research</ion-button>
       <ion-button href='/bazanr/assets/cv.pdf' target='_blank' class='desktop-nav-button'>CV</ion-button>
       <ion-button (click)='teachingPresent($event)' class='desktop-nav-button' [class.active]='this.isOnCourses()'>Courses</ion-button>
-      <ion-button class='desktop-nav-button'><a href='https://cybertigers.org' target='_blank' class='glitch' data-text='CyberTigers @ MU'>CyberTigers @ MU</a></ion-button>
+      <ion-button class='desktop-nav-button'><a href='https://missouri.campuslabs.com/engage/organization/cybertygers' target='_blank' class='glitch' data-text='CyberTigers @ MU'>CyberTygers @ MU</a></ion-button>
     </ion-buttons>
       </ion-toolbar>
       <ion-toolbar *ngIf='isMobile()'>
@@ -60,7 +60,7 @@
           </ion-item>
           <ion-item class='menu-item no-select' (click)='closeMenu()'>
             <ion-icon slot='start' name='log-out-outline' color='danger' class='menu-icon'></ion-icon>
-            <a href='https://cybertigers.org' target='_blank' class='glitch white' data-text='CyberTigers @ MU'>CyberTigers @ MU</a>
+            <a href='https://missouri.campuslabs.com/engage/organization/cybertygers' target='_blank' class='glitch white' data-text='CyberTigers @ MU'>CyberTygers @ MU</a>
           </ion-item>
         </ion-list>
       </ion-content>
